--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "optimist": "~0.6.1",
     "peg": "~0.0.0",
     "pegjs": "~0.8.0",
-    "xml2js": "~0.4.4"
+    "xml2js": "~0.4.4",
+    "browserify": "*"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "*",
+    "should": "*"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -c -R spec"
   },
   "author": "Josh Mandel",
   "license": "Apache 2"
