--- a/lib/ucum-parser.peg.template
+++ b/lib/ucum-parser.peg.template
@@ -1,9 +1,11 @@
 {
   helpers = require('../lib/helpers');
   prefixes = require('./prefixes.json');
+  metrics = require('./metrics.json');
   multiply = helpers.multiply;
   topower = helpers.topower;
   cleanup = helpers.cleanup;
+  ismetric = helpers.ismetric(metrics);
 }
 
 start = e:ucumExpr {
@@ -21,34 +23,15 @@ expr =  t:term ms:(multiply)* {
 term = e:element exp:(exponent)? (ANN)* {
   return topower(e, exp);
 }
-element  = u:simpleUnit /  "(" e:expr ")" {return e;} / ANN
+element  =  a:ANN? u:simpleUnit {return u;} /  "(" e:expr ")" {return e;} / ANN
 
 exponent =  s:([+-])? d:DIGITS {return (s=="-") ? (-1*d) : d}
 
-simpleUnit =   a:ATOM {
- var ret = {
-    value: 1,
-    units: {}
-  };
-  ret.units[a] =  1;
+simpleUnit =  p:PREFIX? a:METRICATOM !{return(p && !ismetric(a));} {
+  var ret = a;
+  if (p) ret.value = ret.value * prefixes[p];
   return ret;
-} /
- p:PREFIX a:METRICATOM {
-  var ret = {
-    value: prefixes[p],
-    units: {}
-  };
-  ret.units[a] =  1;
-  return ret;
-} / a:METRICATOM  {
- var ret = {
-    value: 1,
-    units: {}
-  };
-  ret.units[a] =  1;
-  return ret;
-}
- /  d:DIGITS {
+} / METRICATOM / d:DIGITS {
  var ret = {
     value: d,
     units: {}
@@ -61,10 +44,7 @@ DIGITS = v:[0-9]+ 'e'? e:exponent?  {
   return parseInt(v.join(""))*Math.pow(10, e||0);
 } 
 
-ANN = "{" m:[^}]+ "}" { return "{"+m.join("")+"}" }
-
-ATOM = {{ATOM}}
+ANN = "{" m:[^}]+ "}" { return {value: 1, units:{}} }
 
 METRICATOM = {{METRICATOM}}
-
 PREFIX = {{PREFIX}}
